bg color change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Naveenkumar R - Portfolio</title>
   <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body style="background-color: #e8cfda;">
+  
   <header>
     <h1>Naveenkumar R</h1>
     <p>Software Developer | Python | Django | Java</p>
