--- a/taskk1.html
+++ b/taskk1.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="task1.css" />
 </head>
 <body>
+    <h1>"Sample Front End Tasks</h1>
+    <h2>"Learning Css & HTML"</h2>
     <div class="box">I am a styled box</div>
     <button class="my-btn">Click Me</button>
 
