Added CSS tasks:div changes

--- a/taskk1.html
+++ b/taskk1.html
@@ -11,6 +11,13 @@
     <h2>"Learning Css & HTML"</h2>
     <div class="box">I am a styled box</div>
     <button class="my-btn">Click Me</button>
+    <div class="card">
+  <img src="https://via.placeholder.com/150" alt="Profile Image">
+  <h2>Naveenkumar R</h2>
+  <p>Software Developer</p>
+  <button>Contact</button>
+</div>
+
 
 
 </body>
