--- a/taskk1.html
+++ b/taskk1.html
@@ -18,6 +18,15 @@
   <button>Contact</button>
 </div>
 
+<div class="navbar">
+  <div class="logo">MyWebsite</div>
+  <div class="menu">
+    <a href="#">Home</a>
+    <a href="#">About</a>
+    <a href="#">Projects</a>
+    <a href="#">Contact</a>
+  </div>
+</div>
 
 
 </body>
