Added CSS tasks:added navbar changes

--- a/taskk1.html
+++ b/taskk1.html
@@ -19,7 +19,7 @@
 </div>
 
 <div class="navbar">
-  <div class="logo">MyWebsite</div>
+  <div class="logo">MY PortFOlio</div>
   <div class="menu">
     <a href="#">Home</a>
     <a href="#">About</a>
