--- a/index.html
+++ b/index.html
@@ -1,57 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Naveenkumar R - Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Naveenkumar R | Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
-<body style="background-color: #e8cfda;">
-  
-  <header>
+<body>
+    <header>
     <h1>Naveenkumar R</h1>
-    <p>Software Developer | Python | Django | Java</p>
+    <p>Software Developer | Python | Java | Full Stack Enthusiast</p>
   </header>
 
-  <section id="about">
+    <section id="about">
     <h2>About Me</h2>
-    <p>Passionate software developer with 2+ years experience in Python and Java.</p>
+    <p>I am a passionate software developer with experience in Python, Java, and SQL. I love building projects and guiding students.</p>
   </section>
 
-  <section id="skills">
+    <section id="skills">
     <h2>Skills</h2>
     <ul>
       <li>Python</li>
-      <li>Django</li>
       <li>Java</li>
-      <li>JavaScript</li>
       <li>SQL</li>
+      <li>C/C++</li>
+      <li>Django</li>
     </ul>
   </section>
 
-  <section id="projects">
+    <section id="projects">
     <h2>Projects</h2>
-    <div class="project">
-      <h3>Online Coding Compiler</h3>
-      <p>A web-based code compiler supporting Python code execution.</p>
-      <a href="https://github.com/Naveenraja0501/compiler_code_py
-      " target="_blank">GitHub</a>
-    </div>
-    <!-- Add more projects similarly -->
+    <ul>
+      <li>CRM Software using Python Tkinter & MySQL</li>
+      <li>Face Recognition System in Java</li>
+      <li>Online Coding Compiler with Django</li>
+    </ul>
   </section>
 
-  <section id="contact">
+    <section id="contact">
     <h2>Contact</h2>
     <p>Email: naveenr0501@gmail.com</p>
-    
-
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/naveenkumar-r-bb1702256/" target="_blank">linkedin.com/in/naveenkumar</a></p>
+    <p>LinkedIn: linkedin.com/in/naveenkumar-r</p>
   </section>
-
-  <footer>
-    <p>© 2025 Naveenkumar R</p>
-  </footer>
-
-  <script src="script.js"></script>
-</body>
-</html>
