--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 </nav>
 
     <header>
+    <img src="profile_nav.png" alt="Naveenkumar R" class="profile-img">
+
     <h1>Naveenkumar R</h1>
     <p>Software Developer | Python | Java | Full Stack Enthusiast</p>
   </header>
